[FIX] Some minor changes for alignment.

--- a/addons/openerp/static/css/dashboard.css
+++ b/addons/openerp/static/css/dashboard.css
@@ -14,7 +14,7 @@ div.dashlet {
 }
 
 div.dashlet-title {
-    padding: 2px 5px;
+    padding: 2px 0px;
     white-space: nowrap;
     cursor: move;
     font-weight: bold;
