--- a/addons/openerp/static/css/listgrid.css
+++ b/addons/openerp/static/css/listgrid.css
@@ -115,7 +115,7 @@
 
 .gridview .pagerbar .pagerbar-cell {
     vertical-align: middle;
-    padding: 2px 0px;
+    padding: 2px 5px;
 }
 
 .gridview .pagerbar .pagerbar-cell.footer .pager {
